Fix styling overflow-y bug

--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -11,6 +11,7 @@
     transition: 0.2s;
     overflow-y: auto;
     border-radius: 1em 1em 0 0;
-    /* height: 100%; */
-    height: minmax(max-content calc(100vh - var(--header-height) - var(--footer-height) - var(--mail-list-actions-height)))
+    min-height: 0;
+    max-height: calc(100vh - var(--header-height) - var(--footer-height) - var(--mail-list-actions-height));
+
  }
