--- a/assets/css/apps/mail/cmps/MailPreview.css
+++ b/assets/css/apps/mail/cmps/MailPreview.css
@@ -5,6 +5,7 @@
     cursor: pointer;
     border-bottom: 1px solid rgb(221, 221, 221);
     padding-inline-start: 0.5em;
+    height: var(--mail-preview-height);
 }
 
 .mail-preview {
