--- a/assets/css/setup/variables.css
+++ b/assets/css/setup/variables.css
@@ -6,4 +6,5 @@
     --header-height: 8vh;
     --footer-height: 2em;
     --mail-list-actions-height: 5em;
+    --mail-preview-height: 3em;
 }
